# soku-wrapper

./: Cargo.toml  README.md  build.rs  resources.rc  version.rc
.cargo/: config.toml
src/: main.rs
