[package]
name = "soku-swarm-syncer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = 'z'      # 极致体积优化
lto = true           # 开启链接时优化 (Link Time Optimization)
codegen-units = 1    # 强制单线程编译，以获得最大的全局优化空间
panic = 'abort'      # 抛弃异常回溯，减少代码膨胀
strip = true         # 自动从二进制文件中剥离符号信息

